--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-sql": "^6.8.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -41,6 +42,8 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@uiw/codemirror-theme-vscode": "^4.23.8",
+    "@uiw/react-codemirror": "^4.23.8",
     "@xyflow/react": "^12.0.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.1",
