--- a/package.json
+++ b/package.json
@@ -74,5 +74,8 @@
     "vaul": "^0.9.9",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.16"
   }
 }
