--- a/package.json
+++ b/package.json
@@ -64,8 +64,11 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^8.0.7",
     "react-resizable-panels": "^2.1.3",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.12.7",
+    "remark-gfm": "^3.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
@@ -77,6 +80,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.16"
+    "@types/lodash": "^4.17.16",
+    "@types/react-syntax-highlighter": "^15.5.13"
   }
 }
