--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "18.2.7",
     "@uiw/codemirror-theme-vscode": "^4.23.8",
     "@uiw/react-codemirror": "^4.23.8",
+    "@vercel/analytics": "^1.5.0",
     "@xyflow/react": "^12.0.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.1",
